@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../style.css" type="text/css">
 </head>
 
-<body class=add>
+<body class="popup">
 
 <?
   $edit_item = '';
