@@ -13,6 +13,8 @@
           (http://www.packetfence.org/mantis/view.php?id=555)
         added favicon
           (http://www.packetfence.org/mantis/view.php?id=557)
+        CSS style for web admin gui edit pages
+          (http://www.packetfence.org/mantis/view.php?id=558)
 
 1.8.0
         unify log management
